# mart-delivery-automation

./: .gitignore  pyproject.toml
src/mart_deliveries/: editor.py  gui.py  my_utils.py
src/mart_deliveries/assets/: config.json
